--- a/index.html
+++ b/index.html
@@ -64,49 +64,49 @@
 				<!-- RESEARCH -->
 					<section id="research" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://magazine.caltech.edu/post/nustar-telescope-nasa" class="image"><img src="images/research1.jpg" alt="" data-position="center center" /></a>
+							<a href="https://magazine.caltech.edu/post/nustar-telescope-nasa" target="_blank"  class="image"><img src="images/research1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>NuStar X-Ray Telescope</h2>
 									<p>The NuStar space telescope detects high-energy X-ray light and studies some of the most energetic objects and processes in the universe, from black holes devouring hot gas to the radioactive remains of exploded stars.</p>
 									<ul class="actions">
-										<li><a href="https://magazine.caltech.edu/post/nustar-telescope-nasa" class="button">Learn more</a></li>
+										<li><a href="https://magazine.caltech.edu/post/nustar-telescope-nasa" target="_blank"  class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="https://www.caltech.edu/about/news/an-ocean-of-galaxies-awaits" class="image"><img src="images/research3.jpg" alt="" data-position="top center" /></a>
+							<a href="https://www.caltech.edu/about/news/an-ocean-of-galaxies-awaits"  target="_blank" class="image"><img src="images/research3.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>COMAP (CO Mapping Array Project)t</h2>
 									<p>A new Caltech project, called COMAP (CO Mapping Array Project), will offer us a new glimpse into this epoch of galaxy assembly, helping to answer questions about what really caused the universe's rapid increase in the production of stars.</p>
 									<ul class="actions">
-										<li><a href="https://www.caltech.edu/about/news/an-ocean-of-galaxies-awaits" class="button">Learn more</a></li>
+										<li><a href="https://www.caltech.edu/about/news/an-ocean-of-galaxies-awaits"  target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="https://www.caltech.edu/about/news/a-white-dwarf-living-on-the-edge" class="image"><img src="images/research6.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="https://www.caltech.edu/about/news/a-white-dwarf-living-on-the-edge"  target="_blank" class="image"><img src="images/research6.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Palomar Observatory</h2>
 									<p>The Observatory is home to three active research telescopes. Research at Palomar Observatory is pursued by a broad community of astronomers from Caltech and other domestic and international partner institutions.</p>
 									<ul class="actions">
-										<li><a href="https://www.caltech.edu/about/news/a-white-dwarf-living-on-the-edge" class="button">Learn more</a></li>
+										<li><a href="https://www.caltech.edu/about/news/a-white-dwarf-living-on-the-edge" target="_blank"  class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="https://www.caltech.edu/about/news/nasa-selects-uvex-mission-proposal-for-further-study" class="image"><img src="images/research2.jpg" alt="" data-position="top center" /></a>
+							<a href="https://www.caltech.edu/about/news/nasa-selects-uvex-mission-proposal-for-further-study"  target="_blank" class="image"><img src="images/research2.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>UltraViolet EXplorer (UVEX)</h2>
 									<p>UVEX will conduct a deep survey of the whole sky in two bands of ultraviolet light to provide new insights into galaxy evolution and the life cycle of stars.</p>
 									<ul class="actions">
-										<li><a href="https://www.caltech.edu/about/news/nasa-selects-uvex-mission-proposal-for-further-study" class="button">Learn more</a></li>
+										<li><a href="https://www.caltech.edu/about/news/nasa-selects-uvex-mission-proposal-for-further-study"  target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -239,7 +239,7 @@
 
 <p><span class="image right"><img src="images/astro2.jpg" alt=""></span>My favorite thing about astrophotography is that places with dark skies usually means they are far away from big towns and lots of people. I find it so peaceful sitting out under the stars, miles away from civilization, enjoying the Universe as it is without any reminders of the stresses of modern day. A lot of the most profound moments of my life have taken place out there under the stars, sometimes with other people, sometimes just me and the sky. I love it.
 	
-	<br><br> If you'd like to see more of my photos or ask me how you can started going out and taking your own photos, <b><a href="https://www.cobeycobb.com/" target="_blank" style="color: #4d358a">reach out to me on Instagram</a></b>!</p>
+	<br><br> If you'd like to see more of my photos or ask me how you can started going out and taking your own photos, <b><a href="https://www.instagram.com/capture.the.cosmos" target="_blank" style="color: #4d358a">reach out to me on Instagram</a></b>!</p>
 
 </div>
 </section>
