--- a/index.html
+++ b/index.html
@@ -222,24 +222,174 @@
 
 
 
-
-
 <!-- for fun -->
 
-<section id="forfun" class="wrapper style3 fade-up">
+
+
+
+
+
+
+
+
+				<!-- Five -->
+				<section class="wrapper style1 align-center">
+					<div class="inner">
+						<h2>Massa sed condimentum</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+					</div>
+
+					<!-- Gallery -->
+						<div class="gallery lightbox onscroll-fade-in style1 big">
+							<div class="modal" tabindex="-1"><div class="inner"><img src=""></div></div>
+
+
+
+							<div class="forward"></div>
+							<div class="backward"></div>
+							<div class="inner" style:="overflow: hidden";>
+
+							<article>
+								<a href="images/gallery/fulls/01.jpg" class="image">
+									<img src="images/gallery/thumbs/01.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Ipsum Dolor</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/fulls/02.jpg" class="image">
+									<img src="images/gallery/thumbs/02.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Feugiat Lorem</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/fulls/03.jpg" class="image">
+									<img src="images/gallery/thumbs/03.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Magna Amet</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/fulls/04.jpg" class="image">
+									<img src="images/gallery/thumbs/04.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Sed Tempus</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/fulls/05.jpg" class="image">
+									<img src="images/gallery/thumbs/05.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Ultrices Magna</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/fulls/06.jpg" class="image">
+									<img src="images/gallery/thumbs/06.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Sed Tempus</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/fulls/07.jpg" class="image">
+									<img src="images/gallery/thumbs/07.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Ipsum Lorem</h3>
+									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<ul class="actions fixed">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							</div>
+						</div>
+
+				</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section id="forfun" class="wrapper style3 fullscreen fade-up">
 	<div class="inner">
 		<h2>For Fun</h2>
 
 <p><span class="image left"><img src="images/astro1.jpg" alt=""></span>When I'm not making websites I love being out in nature. I've been doing astrophotography for three years and this amazing hobby has taken me all over the country looking for dark skies and beautiful landscapes. <br><br>
 
-	Some of the best places I've visited have been in Utah. In October 2020 I was working from home and decided to go on the big road trip I'd always told myself I'd do but had never done. I had planned on driving up the coast of California but the wildfires happening at that time prevented me from camping and COVID prevented me from staying in hotels. 
-	
-	<br><br>At the last minute I decided to drive to Utah, knowing basically nothing about it. Needless to say, I was shocked. I had no clue the goods that Utah was packing. If you've been there you know what I'm talking about. If you haven't, please go. It has every kind of landscape you can imagine and a bunch that you never could. </p>
 
 
-<p><span class="image right"><img src="images/astro2.jpg" alt=""></span>My favorite thing about astrophotography is that places with dark skies usually means they are far away from big towns and lots of people. I find it so peaceful sitting out under the stars, miles away from civilization, enjoying the Universe as it is without any reminders of the stresses of modern day. A lot of the most profound moments of my life have taken place out there under the stars, sometimes with other people, sometimes just me and the sky. I love it.
-	
+<p>My favorite thing about astrophotography is that places with dark skies usually means they are far away from big towns and lots of people. I find it so peaceful sitting out under the stars, miles away from civilization, enjoying the Universe as it is without any reminders of the stresses of modern day. A lot of the most profound moments of my life have taken place out there under the stars, sometimes with other people, sometimes just me and the sky. I love it.
+	<span class="image left"><img src="images/astro2.jpg" alt=""></span>
 	<br><br> If you'd like to see more of my photos or ask me how you can started going out and taking your own photos, <b><a href="https://www.instagram.com/capture.the.cosmos" target="_blank" style="color: #4d358a">reach out to me on Instagram</a></b>!</p>
+
+
 
 </div>
 </section>
