--- a/index.html
+++ b/index.html
@@ -225,174 +225,52 @@
 <!-- for fun -->
 
 
-
-
-
-
-
-
-
-				<!-- Five -->
-				<section class="wrapper style1 align-center">
-					<div class="inner">
-						<h2>Massa sed condimentum</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-					</div>
-
-					<!-- Gallery -->
-						<div class="gallery lightbox onscroll-fade-in style1 big">
-							<div class="modal" tabindex="-1"><div class="inner"><img src=""></div></div>
-
-
-
-							<div class="forward"></div>
-							<div class="backward"></div>
-							<div class="inner" style:="overflow: hidden";>
-
-							<article>
-								<a href="images/gallery/fulls/01.jpg" class="image">
-									<img src="images/gallery/thumbs/01.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Ipsum Dolor</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/02.jpg" class="image">
-									<img src="images/gallery/thumbs/02.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Feugiat Lorem</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/03.jpg" class="image">
-									<img src="images/gallery/thumbs/03.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Magna Amet</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/04.jpg" class="image">
-									<img src="images/gallery/thumbs/04.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Sed Tempus</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/05.jpg" class="image">
-									<img src="images/gallery/thumbs/05.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Ultrices Magna</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/06.jpg" class="image">
-									<img src="images/gallery/thumbs/06.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Sed Tempus</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/07.jpg" class="image">
-									<img src="images/gallery/thumbs/07.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Ipsum Lorem</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							</div>
-						</div>
-
-				</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<section id="forfun" class="wrapper style3 fullscreen fade-up">
+<section id="forfun" class="wrapper style4 fade-up">
 	<div class="inner">
-		<h2>For Fun</h2>
-
-<p><span class="image left"><img src="images/astro1.jpg" alt=""></span>When I'm not making websites I love being out in nature. I've been doing astrophotography for three years and this amazing hobby has taken me all over the country looking for dark skies and beautiful landscapes. <br><br>
+<h2>For Fun</h2>
 
 
-
-<p>My favorite thing about astrophotography is that places with dark skies usually means they are far away from big towns and lots of people. I find it so peaceful sitting out under the stars, miles away from civilization, enjoying the Universe as it is without any reminders of the stresses of modern day. A lot of the most profound moments of my life have taken place out there under the stars, sometimes with other people, sometimes just me and the sky. I love it.
-	<span class="image left"><img src="images/astro2.jpg" alt=""></span>
-	<br><br> If you'd like to see more of my photos or ask me how you can started going out and taking your own photos, <b><a href="https://www.instagram.com/capture.the.cosmos" target="_blank" style="color: #4d358a">reach out to me on Instagram</a></b>!</p>
+	<section>
+		
 
 
+		<div>
 
-</div>
+
+			<center><div class="image"><img src="images/astro3.jpg" alt=""></div></center>
+
+			
+		</div>
+<br>
+
+		When I'm not making websites I love being out in nature. I've been doing astrophotography for three years and this amazing hobby has taken me all over the country looking for dark skies and beautiful landscapes. <br><br>
+
+
+
+<p>My favorite thing about astrophotography is that for a place to have dark skies it has to be far away from big towns and lots of people. It's peaceful sitting out under the stars, miles away from civilization. You cane even pretend you're a sole explorer on another planet. 
+	
+	<br><br> If you'd like to see more of my photos or ask me how you can started going out and taking your own photos, <a href="https://www.instagram.com/capture.the.cosmos" target="_blank" style="color: #4acaa8">reach out to me on Instagram</a>!</p>
+	
 </section>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
