--- a/index.html
+++ b/index.html
@@ -235,22 +235,24 @@
 		
 
 
-		<div>
 
+		<div class="image right"><img src="images/astro3.jpg" alt=""></div>
 
-			<center><div class="image"><img src="images/astro3.jpg" alt=""></div></center>
+		
 
 			
-		</div>
-<br>
-
-		When I'm not making websites I love being out in nature. I've been doing astrophotography for three years and this amazing hobby has taken me all over the country looking for dark skies and beautiful landscapes. <br><br>
 
 
+
+		When I'm not making websites I love being out in nature. I've been doing astrophotography for three years and this amazing hobby has taken me all over the country looking for dark skies and beautiful landscapes.
+
+		<br><br>
 
 <p>My favorite thing about astrophotography is that for a place to have dark skies it has to be far away from big towns and lots of people. It's peaceful sitting out under the stars, miles away from civilization. You can even pretend you're a sole explorer on another planet. 
 	
 	<br><br> If you'd like to see more of my photos or ask me how you can started going out and taking your own photos, <a href="https://www.instagram.com/capture.the.cosmos" target="_blank" style="color: #4acaa8">reach out to me on Instagram</a>!</p>
+
+	
 	
 </section>
 </section>
