--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
 						<li>
 							<h3>Social</h3>
 							<ul class="icons">
-								<li><a href="https://www.instagram.com/capture.the.cosmos" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.twitter.com/cobeycobb" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/cobey.cobb" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/capture.the.cosmos"  target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.twitter.com/cobeycobb"  target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/cobey.cobb" target="_blank"  class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										
 	
 									<!--	<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
