--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</section>
 			</div>
 			<ul class="actions">
-				<li><a href="#" class="button">See More</a></li>
+				<li><a href="publications.html" class="button">See More</a></li>
 			</ul>
 		</div>
 	</section>
