--- a/publications.html
+++ b/publications.html
@@ -162,7 +162,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Cobey Cobb. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
