--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <!-- for fun -->
 
 
-<section id="forfun" class="wrapper style4 fade-up">
+<section id="forfun" class="wrapper style4 fullscreen fade-up">
 	<div class="inner">
 <h2>For Fun</h2>
 
