--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<a href="https://www.caltech.edu/about/news/an-ocean-of-galaxies-awaits"  target="_blank" class="image"><img src="images/research3.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>COMAP (CO Mapping Array Project)t</h2>
+									<h2>COMAP (CO Mapping Array Project)</h2>
 									<p>A new Caltech project, called COMAP (CO Mapping Array Project), will offer us a new glimpse into this epoch of galaxy assembly, helping to answer questions about what really caused the universe's rapid increase in the production of stars.</p>
 									<ul class="actions">
 										<li><a href="https://www.caltech.edu/about/news/an-ocean-of-galaxies-awaits"  target="_blank" class="button">Learn more</a></li>
